--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="signifox" />
 		<meta name="author" content="signifox" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="wb:webmaster" content="3df957bbf2484c18" />
 		<link href="/media/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 		<link href="/media/css/bootstrap-responsive.css" rel="stylesheet" type="text/css" media="all" />
 		<link href="/media/css/font-awesome.css" rel="stylesheet" type="text/css" media="all" />
